# tempdevicesim

./: .gitignore  pyproject.toml
.github/workflows/: staging.yml
src/app/: __init__.py  __main__.py  app.py
src/app/templates/: crowconDevice.html
